# nu-tongues

./: Cargo.toml
example_translation_tomls/: en.toml
src/: ansi_strings.rs  language_toml.rs  main.rs  message_key.rs  posix_language.rs
