[package]
name = "nu_plugin_nu-tongues"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nu-plugin = "0.93.0"
nu-protocol = "0.93.0"
regex = "*"
lazy_static = "*"
toml = "*"
serde = "*"
nu-ansi-term = "*"

