[package]
name = "nu_plugin_nu-tongues"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nu-plugin = "0.93.0"
nu-protocol = "0.93.0"
regex = "1.10.4"
lazy_static = "1.4.0"
toml = "0.8.12"
serde = "1.31.0"
nu-ansi-term = "0.46.0"
