[package]
name = "nu_plugin_nu-tongues"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nu-plugin = "0.94.0"
nu-protocol = "0.94.0"
regex = "1.10.4"
once_cell = "1.19.0"
toml = "0.8.12"
serde = "1.0.201"
nu-ansi-term = "0.46.0"

